# web_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
app/: config.py  init_db.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  form.py
app/crud/: __init__.py  crud_form.py  utils.py
app/db/: db.py
app/schemas/: __init__.py  form.py
tests/: conftest.py  test_db.py
